Commented out DEBUG log mode

--- a/log4j.properties
+++ b/log4j.properties
@@ -1,5 +1,6 @@
 # Change INFO to DEBUG, if you want to see debugging info on underlying libraries we use.
 log4j.rootLogger=INFO, a
+# log4j.rootLogger=DEBUG, a
 
 # Change INFO to DEBUG, if you want see debugging info on our packages and spring security packages.
 log4j.category.org.mskcc=INFO
